Fix Access Token not working due to GitHub's deprecating.